# mast

./: CLAUDE.md  README.md  pyproject.toml
benchmarks/donoharm/: prompt.md  schema.json  validator.py
benchmarks/donoharm/inputs/: test_001.txt
benchmarks/donoharm/outputs/: test_001.txt
benchmarks/donoharm/prompts/: default.md  limit500.md  limitnone.md
benchmarks/noharm/: validator.py
benchmarks/sct/: README.md  prompt.md  schema.json  validator.py
benchmarks/sct/inputs/: example_001.txt  test_002.txt  test_003.txt  test_004.txt  test_005.txt
benchmarks/sct/outputs/: example_003.json  example_004.json  test_001.json  test_002.json  test_005.json
benchmarks/template/: schema.json  validator.py
docs/: benchmark_descriptions.md  contributing.md  submission_agreement.md
scripts/: LOCAL_MODEL_SETUP.md  local_model_server.py  utils.py  validate_all.py
