[project]
name = "mast"
version = "0.1.0"
description = "Medical AI Superintelligence Test - API-based benchmark validation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
local-server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.50.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "pillow>=10.0.0",
]
